# hidden-friend-API

./: README.md
docs/: planejamento.md
src/: app.py  database.db  pyproject.toml
src/application/providers/: hash_provider.py  token_provider.py
src/application/usecases/: login_user_usecase.py  register_user_usecase.py
src/core/: settings.py
src/domain/entities/: user_entity.py
src/domain/models/: event_model.py  participation_model.py  user_model.py
src/domain/repositories/: user_repository.py
src/infra/: sqlalchemy_user_repository.py
src/infra/providers/: bcrypthash_provider.py  josetoken_provider.py
src/infra/sqlalchemy/: db.py
src/infra/sqlalchemy/models/: constants.py  event_model.py  participation_model.py  user_model.py
src/infra/sqlalchemy/repositories/: sqlalchemy_user_repository.py
src/presentation/: dependecies.py
src/presentation/controllers/: auth_controller.py
src/presentation/exceptions/: auth_exceptions.py  base_exceptions.py  user_exceptions.py
src/presentation/middlewares/: auth_middleware.py
src/presentation/routes/: auth_route.py
src/presentation/schemas/: auth_schemas.py  user_schemas.py
tests/: .gitkeep
